SSCSFT-25 UC WCA Journey - Start date
Increase test coverage